--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -732,8 +732,8 @@ ClassificationLevel $\sqsubseteq$ Collection \\
 fundedBy $\sqsubseteq$ contributor
 \end{DL} 
 
-\section{Basic Constraint Types}
-\label{vocabulary-constraint-types}
+%\section{Basic Constraint Types}
+%\label{vocabulary-constraint-types}
 
 %As \emph{RDFS} and \emph{OWL} are typically used to define vocabularies, \emph{RDFS} and \emph{OWL} reasoning may be performed prior to validation. 
 %Reasoning and validation are indeed very closely related. 
@@ -745,8 +745,10 @@ fundedBy $\sqsubseteq$ contributor
   %\item $\overline{\mathcal{C}_B ^{\mathcal{R}}}$  denotes the set of constraint types for which reasoning cannot be done or does not improve the result in any obvious sense (section \ref{basic-constraint-types-without-reasoning}).
 %\end{enumerate}
 
-\subsection{Basic Constraint Types with Reasoning}
-\label{basic-constraint-types-with-reasoning}
+-----
+
+%\subsection{Basic Constraint Types with Reasoning}
+%\label{basic-constraint-types-with-reasoning}
 
 %%Validation environments should enable users to decide if they wish to perform reasoning prior to validation.
 %%Reasoning as an optional pre validation step is beneficial for RDF validation as 
